--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,11 @@
+// Fonts Raleway (300, 400, 500, 600, 700, 800, 900) 
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700;800;900&display=swap');
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: 'Raleway', sans-serif;
 }
 
 :root {
