--- a/src/index.scss
+++ b/src/index.scss
@@ -6,6 +6,11 @@
   margin: 0;
   padding: 0;
   font-family: 'Raleway', sans-serif;
+
+  a {
+    text-decoration: none; 
+    color: inherit; 
+  }
 }
 
 :root {
