--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -1,7 +1,7 @@
 @use '../../sass/variables' as *;
 
 .Header {
-    padding: 3vh 0 4vh 7vh;
+    padding: 3vh 6vh 4vh 7vh;
     background-color: $header-background;
 
     &__img {
