--- a/src/components/ProductsCard/index.scss
+++ b/src/components/ProductsCard/index.scss
@@ -1,8 +1,13 @@
 @use '../../sass/variables' as *;
 
 .home__card {
-    border-radius: 8px;
+    border-radius: 1vw;
     border: 1px solid $border-background-card;
+
+    img {
+        border-top-left-radius: inherit;
+        border-top-right-radius: inherit;
+    }
 
     &-description {
         text-align: center;
