--- a/src/views/Login/index.scss
+++ b/src/views/Login/index.scss
@@ -1,77 +1,117 @@
 @use '../../sass/variables' as *;
+@use '../../sass/mediaQueries' as *;
 
 .login {
     height: 100vh;
     width: 100vw;
 
+    &__text {
+        text-align: center;
+        padding: 0 0 8vh 0;
+    }
+
     &__form {
         display: flex;
         flex-direction: column;
         align-items: center;
-        margin-top: 15vh;
+        justify-content: center;
+        row-gap: 7vh;
+        height: 90vh;
+
     }
 
     h1 {
         color: $black;
-        font-size: 2vw;
+        font-size: 2rem;
         font-style: normal;
         font-weight: 500;
         line-height: normal;
-        margin-bottom: 1vh;
+
+        @include respond-to-small {
+            font-size: 1rem;
+        }
     }
 
     h2 {
         color: $black;
-        font-size: 1.4vw;
+        font-size: 1.5rem;
         font-style: normal;
         font-weight: 500;
         line-height: normal;
+
+        @include respond-to-small {
+            font-size: 1rem;
+        }
     }
 
     &__input-wrapper {
         display: flex;
         flex-direction: column;
+        row-gap: 3vh;
+    }
+
+    &__input {
+        display: inherit;
+        flex-direction: inherit;
+        row-gap: 1vh;
     }
 
     button {
         width: 35vw;
         height: 6vh;
         padding: 1.5vh 1vw;
-        border-radius: 6px;
+        
+        border-radius: 0.5rem;
         border: none;
-        margin-top: 4vh;
-
         background: $contrast-color;
 
         color: $white;
-        font-size: 18px;
+        font-size: 1rem;
         font-style: normal;
         font-weight: 800;
         line-height: normal;
+
+        @include respond-to-medium {
+            height: 8vh;
+        }
     }
 
 }
 
 .login__input-wrapper {
-    margin-top: 10vh;
 
     label {
         color: $black;
-        font-size: 1.2vw;
+        font-size: 1.3rem;
         font-style: normal;
         font-weight: 400;
         line-height: normal;
+
+        @include respond-to-small {
+            font-size: 0.8rem;
+        }
     }
 
     input {
         width: 35vw;
         height: 6vh;
         padding: 1.5vh 1vw;
-        margin-top: 1.5vh;
-        margin-bottom: 3vh;
 
-        border-radius: 10px;
-        border: 2px solid $border-input-color;
+        border-radius: 0.5rem;
+        border: 0.1rem solid $border-input-color;
         background: rgba(255, 255, 255, 0.90);
+
+        font-size: 1rem;
+
+        @include respond-to-small {
+            width: 75vw;
+
+            font-size: 0.6rem;
+        }
+
+        @include respond-to-medium {
+            width: 60vw;
+            height: 7.5vh;
+        }
     }
 }
