feat(views/Login): login validation

--- a/src/views/Login/index.scss
+++ b/src/views/Login/index.scss
@@ -64,6 +64,7 @@
         border-radius: 0.5rem;
         border: none;
         background: $contrast-color;
+        cursor: pointer;
 
         color: $white;
         font-size: 1rem;
