--- a/src/components/HeaderMenu/index.scss
+++ b/src/components/HeaderMenu/index.scss
@@ -1,4 +1,5 @@
 @use '../../sass/variables' as *;
+@use '../../sass/mediaQueries' as *;
 
 .Header {
     display: flex;
@@ -17,18 +18,31 @@
         padding: 0 0 0 3vw;
 
         color: $black;
-        font-size: 1.20vw;
+        font-size: 1.3rem;
         font-style: normal;
         font-weight: 400;
         line-height: normal;
         cursor: pointer;
 
+        @include respond-to-small {
+            font-size: 0.5rem;
+            gap: 2vw;
+        }
+
+        @include respond-to-medium {
+            font-size: 1rem;
+            gap: 2vw;
+        }
+
+        @include respond-to-large {
+            gap: 2vw;
+        }
     }
 
     li:hover {
         color: #555555;
         font-weight: 600;
-        
+
         transform: translateX(1px) translateY(-0.5vh);
         text-shadow: 0.1vw 0.5vh 0.8vh rgba(0, 0, 0, 0.525);
         transition: 400ms;
@@ -40,26 +54,41 @@
         gap: 1vw;
 
         cursor: pointer;
+
+        @include respond-to-small {
+            gap: 0vw;
+        }
+
+        @include respond-to-medium {
+            gap: 0.5vw;
+        }
+
     }
 
     h2 {
         color: $black;
-        font-size: 1.20vw;
+        font-size: 1.3rem;
         font-style: normal;
         font-weight: 500;
         line-height: normal;
 
-        
+
         &:hover {
             color: #555555;
             font-weight: 600;
-            
+
             transform: translateX(1px) translateY(-0.5vh);
             transition: 400ms;
             text-shadow: 0.1vw 0.5vh 0.8vh rgba(0, 0, 0, 0.525);
         }
 
+        @include respond-to-small {
+            font-size: 0.6rem;
+        }
 
+        @include respond-to-medium {
+            font-size: 1rem;
+        }
     }
 
     &__img {
