--- a/src/components/HeaderMenu/index.scss
+++ b/src/components/HeaderMenu/index.scss
@@ -43,9 +43,9 @@
         color: #555555;
         font-weight: 600;
 
-        transform: translateX(1px) translateY(-0.5vh);
-        text-shadow: 0.1vw 0.5vh 0.8vh rgba(0, 0, 0, 0.525);
-        transition: 400ms;
+        transform: translateX(0) translateY(-0.2vh);
+        text-shadow: 0.1vw 0.3vh 0.8vh rgba(0, 0, 0, 0.25);
+        transition: ease 300ms;
     }
 
     div {
@@ -77,9 +77,9 @@
             color: #555555;
             font-weight: 600;
 
-            transform: translateX(1px) translateY(-0.5vh);
-            transition: 400ms;
-            text-shadow: 0.1vw 0.5vh 0.8vh rgba(0, 0, 0, 0.525);
+            transform: translateX(0) translateY(-0.2vh);
+            text-shadow: 0.1vw 0.3vh 0.8vh rgba(0, 0, 0, 0.25);
+            transition: ease 300ms;
         }
 
         @include respond-to-small {
