--- a/src/components/ProductsCard/index.scss
+++ b/src/components/ProductsCard/index.scss
@@ -1,8 +1,8 @@
 @use '../../sass/variables' as *;
 
 .home__card {
-    border-radius: 1vw;
-    border: 1px solid $border-background-card;
+    border-radius: 1rem;
+    border: 0.01rem solid $border-background-card;
 
     img {
         border-top-left-radius: inherit;
@@ -11,20 +11,18 @@
 
     &-description {
         text-align: center;
-        font-size: 1vw;
-        font-style: normal;
+        font-size: 1rem;
         font-weight: 400;
         padding: 2vh 0;
 
         button {
-            border: 1px solid rgba(0, 0, 0, 0.30);
+            border: 0.01rem solid rgba(0, 0, 0, 0.30);
             background: $contrast-color;
             padding: 1vh 3vw;
             color: $white;
             margin-top: 2vh;
 
-            font-size: 1vw;
-            font-style: normal;
+            font-size: 1rem;
             font-weight: 700;
         }
 
