--- a/src/views/Pay/index.scss
+++ b/src/views/Pay/index.scss
@@ -1,33 +1,46 @@
 @use "../../sass/variables" as *;
+@use "../../sass/mediaQueries" as *;
 
 .pay-detail {
-    display: flex;
-    justify-content: space-around;
-    height: 70vh;
-    margin-top: 10vh;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 10vw;
+    height: 90vh;
+    padding: 5vh 10vw;
 
-    &__sizes {
-        display: flex;
-        column-gap: 1rem;
+    @include respond-to-small {
+        padding: 5vh 5vw;
+        grid-template-columns: 1fr;
+        row-gap: 5vh;
+        height: auto;
     }
 
     &__left-side {
         form {
             display: flex;
             flex-direction: column;
-            gap: 1rem;
+            row-gap: 5vh;
         }
 
         button {
             background: $contrast-color;
             width: 100%;
             height: 10vh;
-            border-radius: 6px;
-            font-size: 2vw;
-            font-weight: 800;
+            border-radius: 0.5rem;
             border: none;
+
+            font-size: 2rem;
+            font-weight: 800;
             color: $white;
-            margin-bottom: 3vh;
+
+            @include respond-to-small {
+                font-size: 1rem;
+                height: 5vh;
+            }
+
+            @include respond-to-medium {
+                font-size: 1.5rem;
+            }
         }
 
     }
@@ -35,54 +48,54 @@
     &__input-wrapper {
         display: flex;
         flex-direction: column;
-        gap: 3vh;
-        margin-bottom: 2rem;
+        gap: 5vh;
 
         label {
-            font-size: 30px;
+            font-size: 2rem;
+            font-family: 'raleway';
+            line-height: 3rem;
+
+            @include respond-to-small {
+                font-size: 1rem;
+                line-height: 2rem;
+            }
+
+            @include respond-to-medium {
+                font-size: 1.2rem;
+                line-height: 2rem;
+            }
         }
 
         input {
-            width: 524px;
-            height: 52px;
-            border-radius: 10px;
-            padding: 11px 13px;
-            border: 2px solid #7a7a7a;
-        }
-    }
+            width: 100%;
+            height: 3vw;
+            border-radius: 0.5rem;
+            padding: 1vh 1vw;
+            border: 0.1rem solid #7a7a7a;
 
-    &__input-name {
-        margin-bottom: 47px;
-    }
-
-    &__card {
-        border-radius: 8px;
-        border: 1px solid $border-background-card;
-
-        p {
-            padding: 1rem;
+            @include respond-to-small {
+                height: 10vw;
+            }
         }
     }
 
     &__format {
-        margin-bottom: 100px;
         display: flex;
         flex-direction: column;
-        gap: 1rem;
+        gap: 2vh;
+    }
 
-        input {
-            margin-right: 0.5rem;
+    &__format h2 {
+        font-size: 1.5rem;
+
+        @include respond-to-medium {
+            font-size: 1rem;
         }
     }
 
-    &__description {
-        p {
-            padding-top: 0.5rem;
-            padding-bottom: 1rem;
-            border-bottom: 2px solid $border-background-card;
-        }
-
-        font-size: 25px;
+    &__formatInput {
+        display: flex;
+        column-gap: 2%;
     }
 
     &__right-side {
@@ -90,39 +103,45 @@
         flex-direction: column;
         gap: 1rem;
         background: rgba(238, 238, 238, 0.2);
-        box-shadow: 0px 4px 4px rgb(0 0 0 / 25%);
-        padding: 3rem;
-        height: 287px;
-        width: 586px;
+        box-shadow: 0px 0.4rem 0.4rem rgb(0 0 0 / 25%);
+        padding: 5%;
+        height: 75%;
+        width: 100%;
 
-        button {
-            background-color: $contrast-color;
-            width: 638px;
-            height: 47px;
-            border-radius: 10px;
-            margin-top: 50px;
+        @include respond-to-small {
+            height: 100%;
         }
+    }
 
-        a {
-            text-decoration: none;
-            color: $white;
-            font-size: 25px;
-            font-weight: 700;
-            line-height: 20px;
-        }
+    &__description {
+        font-family: 'raleway';
+        font-size: 1.2rem;
+        font-weight: 400;
     }
 
     &__product-price {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        border-bottom: 2px solid #d9d9d9;
+        border-bottom: 0.15rem solid #d9d9d9;
         padding-bottom: 2rem;
+    }
+
+    &__product-price h1 {
+        font-family: 'Montserrat';
+        font-size: 1.5rem;
+        font-weight: 600;
     }
 
     &__product-total {
         display: flex;
         justify-content: space-between;
         align-items: center;
+    }
+
+    &__product-total h1 {
+        font-family: 'Montserrat';
+        font-size: 1.5rem;
+        font-weight: 600;
     }
 }
